// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadedView collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
    >
      <CourseList />
    </Col>
    <Col
      className="sidebar-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <WidgetSidebar />
    </Col>
  </Row>
</Container>
`;

exports[`LoadedView not collapsed snapshot 1`] = `
<Container
  fluid={true}
  size="xl"
>
  <Row>
    <Col
      className="course-list-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 8,
        }
      }
    >
      <CourseList />
    </Col>
    <Col
      className="sidebar-column"
      lg={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      md={
        Object {
          "offset": 1,
          "span": 10,
        }
      }
      sm={
        Object {
          "offset": 0,
          "span": 12,
        }
      }
      xl={
        Object {
          "offset": 0,
          "span": 4,
        }
      }
    >
      <h2
        className="course-list-title"
      >
         
      </h2>
      <WidgetSidebar />
    </Col>
  </Row>
</Container>
`;
